@@ -49,7 +49,7 @@ Henri P. Gavin, P.E., Ph.D., </font></i></p>
 <iframe src="version.html" width="250" height="30" style="border:solid 1pt grey"></iframe>
 
 <!-- <h4>DESCRIPTION </h4> -->
-<p><b>Frame3DD</b> is a program for the static and dynamic structural analysis of two- and three-dimensional frames and trusses with elastic and geometric stiffness.
+<p><b>Frame3DD</b>  is a program for the static and dynamic structural analysis of two- and three-dimensional frames and trusses with elastic and geometric stiffness.
 </p>
 
 <!-- 3D frames , 3D frames , 3D frames , 3D frames , 3D frames , 3D frames  -->
@@ -2801,12 +2801,20 @@ Source code for this document as well as Frame3dd itself is available from
 http://www.sourceforge.net/projects/frame3dd/</a>
 </p>
 
-<p>Last update: <SCRIPT LANGUAGE="JavaScript">
+<hr>
+<a href="http://sourceforge.net/projects/frame3dd/"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=221386&amp;type=16" align="left" border="0" width="150" height="40" style="margin:10px" alt="Get FRAME3DD at SourceForge.net. Fast, secure and Free Open Source software downloads" /></a>
+<p>
+<br>
+<!-- Automatically updated "last-modified" date -->
+<font face="Arial, Helvetica, sans-serif" size="2">
+<SCRIPT LANGUAGE="JavaScript">
 <!--
 m = "Last updated " + document.lastModified;
 document.write(m);
 // -->
-</SCRIPT> (see full <a href="http://frame3dd.svn.sourceforge.net/viewvc/frame3dd/trunk/doc/user-manual.html?view=log">revision log</a>)
+(See the full <a href="http://frame3dd.svn.sourceforge.net/viewvc/frame3dd/trunk/doc/user-manual.html?view=log">revision log</a>.)
+</font>
+</p>
 
 <!-- google analytics -->
 <script type="text/javascript">
